@@ -95,6 +95,7 @@ Current:
       - bug #38732: Support for ATtiny1634
       - bug #36901 flashing Atmega32U4 EEPROM produces garbage on chip
       - bug #28344 chip_erase_delay too short for ATmega324P, 644, 644P, and 1284P
+      - bug #34277: avrdude reads wrong byte order if using avr911 (aka butterfly)
 
   * Keep track of input file contents
 
